Added Aslay profile

--- a/index.html
+++ b/index.html
@@ -26,7 +26,18 @@
     They are really beautiful songs and when I listen to them they really make me feel good.<br>
     Unfortunately the Band split up in 2015 and each member is working on solo projects at the moment!
     </p>
-        
+    <h3 id="band">Band Members</h3>
+    <div id="parent"> 
+    <img class="member" src="images/aslay.jpg" alt="Dogo Aslay">
+    <h4> Dogo Aslay</h4>
+    <p id="two">
+    A young man by the name of <em>Siaka Nasor</em>,<br> 
+    who is popularly known as Dogo Aslay, <br>
+    can probably be called the backbone of Yamoto Band.<br> 
+    Even before he joined the group, he had already had a reputation for himself.<br> 
+    Dogo is behind some of the best singles of the group, <br>
+    including Naenda Kusema Kwa Mama.
+    </div>
         
 
     <footer class="owner">
