added Maromboso profile

--- a/index.html
+++ b/index.html
@@ -38,6 +38,17 @@
     Dogo is behind some of the best singles of the group, <br>
     including Naenda Kusema Kwa Mama.
     </div>
+    <div id="parent"> 
+        <img class="member" src="images/Mbosso.jpg" alt="Maromboso">
+        <h4> Maromboso</h4>
+        <p id="two">
+        Back when he was a member of Yamoto Band, 
+        Maromboso, whose real name is Mbwana Yusuph Kilungi,<br>
+        had been the most stylish one of the group. 
+        One of the reasons why the band became so popular was <br>
+        probably his impeccable sense of style.
+        </p>
+        </div>
         
 
     <footer class="owner">
