added Enock Bella profile

--- a/index.html
+++ b/index.html
@@ -49,6 +49,19 @@
         probably his impeccable sense of style.
         </p>
         </div>
+        <div id="parent"> 
+            <img class="member"src="images/Bella.jpg" alt="Enock Bella">
+            <h4> Enock Bella</h4>
+            <p id="two">
+            Out of the four band members, <br> Enock had the most distinct voice.<br> 
+            It was a common element of most songs of Yamoto Band,<br> 
+            as each song had his vocal stylings right before the climax. 
+            Even though Enock ventured into his own solo career,
+            Though it was hard for him to overcome the group mentality 
+            he developed while being a part of the Yamoto Band.
+            he is an actor as well as a song writer.
+            </p>
+            </div>
         
 
     <footer class="owner">
