added best songs header

--- a/index.html
+++ b/index.html
@@ -27,32 +27,32 @@
     Unfortunately the Band split up in 2015 and each member is working on solo projects at the moment!
     </p>
     <h3 id="band">Band Members</h3>
-    <div id="parent"> 
-    <img class="member" src="images/aslay.jpg" alt="Dogo Aslay">
-    <h4> Dogo Aslay</h4>
-    <p id="two">
-    A young man by the name of <em>Siaka Nasor</em>,<br> 
-    who is popularly known as Dogo Aslay, <br>
-    can probably be called the backbone of Yamoto Band.<br> 
-    Even before he joined the group, he had already had a reputation for himself.<br> 
-    Dogo is behind some of the best singles of the group, <br>
-    including Naenda Kusema Kwa Mama.
-    </div>
-    <div id="parent"> 
-        <img class="member" src="images/Mbosso.jpg" alt="Maromboso">
-        <h4> Maromboso</h4>
-        <p id="two">
-        Back when he was a member of Yamoto Band, 
-        Maromboso, whose real name is Mbwana Yusuph Kilungi,<br>
-        had been the most stylish one of the group. 
-        One of the reasons why the band became so popular was <br>
-        probably his impeccable sense of style.
-        </p>
-        </div>
-        <div id="parent"> 
-            <img class="member"src="images/Bella.jpg" alt="Enock Bella">
-            <h4> Enock Bella</h4>
-            <p id="two">
+<div id="parent"> 
+       <img class="member" src="images/aslay.jpg" alt="Dogo Aslay">
+       <h4> Dogo Aslay</h4>
+       <p id="two">
+        A young man by the name of <em>Siaka Nasor</em>,<br> 
+       who is popularly known as Dogo Aslay, <br>
+       can probably be called the backbone of Yamoto Band.<br> 
+       Even before he joined the group, he had already had a reputation for himself.<br> 
+       Dogo is behind some of the best singles of the group, <br>
+       including Naenda Kusema Kwa Mama.
+</div>
+<div id="parent"> 
+          <img class="member" src="images/Mbosso.jpg" alt="Maromboso">
+          <h4> Maromboso</h4>
+          <p id="two">
+          Back when he was a member of Yamoto Band, 
+          Maromboso, whose real name is Mbwana Yusuph Kilungi,<br>
+          had been the most stylish one of the group. 
+          One of the reasons why the band became so popular was <br>
+          probably his impeccable sense of style.
+          </p>
+</div>
+<div id="parent"> 
+          <img class="member"src="images/Bella.jpg" alt="Enock Bella">
+          <h4> Enock Bella</h4>
+          <p id="two">
             Out of the four band members, <br> Enock had the most distinct voice.<br> 
             It was a common element of most songs of Yamoto Band,<br> 
             as each song had his vocal stylings right before the climax. 
@@ -61,7 +61,19 @@
             he developed while being a part of the Yamoto Band.
             he is an actor as well as a song writer.
             </p>
-            </div>
+</div>
+<div id="parent"> 
+                <img class="member"src="images/Beka.jpg" alt="Beka Flavour">
+                <h4>Beka Flavour</h4>
+                <p id="two"> Beka was the first person to blame Dogo for the tumult inside the group. <br>
+                He was incredibly displeased with the fact that Aslay went behind everyone’s
+                back and recorded a solo track while still being a part of the group. <br>
+                It seems like Beka can breathe easier now that he is a free man.<br> 
+                He has released several successful singles and continues to win over 
+                the hearts of his fans.<br>
+                </p>
+    </div>
+<Div class="Best"></Div>
         
 
     <footer class="owner">
