added nitakupwelepweta song and link

--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
                 the hearts of his fans.<br>
                 </p>
     </div>
-<Div class="Best"></Div>
+    <Div class="Best">
+        <h3>Best video Songs from the Yamoto Band</h3>
+        <a href="https://www.youtube.com/watch?v=k7uMsGcNqmA"><li>Nitakupwelepweta</li></a>
         
 
     <footer class="owner">
