--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         <h3>Best video Songs from the Yamoto Band</h3>
         <a href="https://www.youtube.com/watch?v=k7uMsGcNqmA"><li>Nitakupwelepweta</li></a>
         <a href="https://www.youtube.com/watch?v=q5lYMnjCkUE"><li>Nisambazie Raha</li></a>
+        <a href="https://www.youtube.com/watch?v=z51oufdQ_0Y"><li>Cheza kwa madoido</li></a>
         
 
     <footer class="owner">
