--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         <a href="https://www.youtube.com/watch?v=q5lYMnjCkUE"><li>Nisambazie Raha</li></a>
         <a href="https://www.youtube.com/watch?v=z51oufdQ_0Y"><li>Cheza kwa madoido</li></a>
         <a href="https://www.youtube.com/watch?v=8AbvvWlcxB8"><li>Basi</li></a>
+        <a href="https://www.youtube.com/watch?v=7asVg5C8TCs"><li>Niseme</li></a>
         
 
     <footer class="owner">
