--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
    
  <Div class="all">
-    h1>Yamoto Band</h1>
+    <h1>Yamoto Band</h1>
     <img class="center" src ="images/yamoto.jpg" height="400" width="800" alt=" yamoto members">
     <h2>About Yamoto Band</h2>
     <p id="one">Yamoto Band comprises of four young talented Tanzanian artists;<br>
