broke a part of paragraph

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 It was a common element of most songs of Yamoto Band,<br> 
                 as each song had his vocal stylings right before the climax. 
                 Even though Enock ventured into his own solo career,<br>
-                Though it was hard for him to overcome the group mentality 
+                Though it was hard for him to overcome the group mentality <br>
                 he developed while being a part of the Yamoto Band.
                 he is an actor as well as a song writer.
                 </p>
